@@ -7,6 +7,7 @@
 </head>
 
 <body>
+<div id="messsage"></div>
 <div>Classes
   <dl>
     <dt><label for="element-class">Resulted elements</label></dt>
