@@ -1,5 +1,11 @@
 2017-09-23  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/background/try_xpath_background.js:
+	Define genericListener.listeners.loadOptions function.
+
+	* tryXpath/pages/options.js:
+	Modify this file to load the options when window is loaded.
+
 	* tryXpath/pages/options.html:
 	Create this file.
 
